--- a/CLIP_text_image.ipynb
+++ b/CLIP_text_image.ipynb
@@ -71,32 +71,22 @@
     "        return self.segformer(x, pe, condition)\n",
     "    \n",
     "    def training_step(self, batch, batch_idx):\n",
-    "        x, y, condition = batch\n",
+    "        x, condition, y = batch\n",
     "        y_hat = self(x, condition)\n",
     "        loss = self.neloss(y_hat, y)\n",
     "        self.log(\"train_loss\", loss, prog_bar=True)\n",
     "\n",
-    "        if self.global_step % self.plot_every == 0: \n",
-    "            y = y.repeat(1, 3, 1, 1)\n",
-    "            y_hat = y_hat.repeat(1, 3, 1, 1)\n",
-    "\n",
-    "            # x_grid = torchvision.utils.make_grid(train_dataset.image_inverse_transform(x))\n",
-    "            # self.logger.experiment.add_image('train_sample_image', x_grid, self.global_step)\n",
-    "\n",
-    "            grid = torchvision.utils.make_grid(torch.cat([y, y_hat], dim=0))\n",
-    "            self.logger.experiment.add_image('train_sample_mask', grid, self.global_step)\n",
-    "\n",
     "        return loss\n",
     "    \n",
     "    def validation_step(self, batch, batch_idx):\n",
-    "        x, y, condition = batch\n",
+    "        x, condition, y = batch\n",
     "        y_hat = self(x, condition)\n",
     "        loss = self.neloss(y_hat, y)\n",
     "        self.log(\"val_loss\", loss, prog_bar=True)\n",
     "        return loss\n",
     "    \n",
     "    def test_step(self, batch, batch_idx):\n",
-    "        x, y, condition = batch\n",
+    "        x, condition, y = batch\n",
     "        y_hat = self(x, condition)\n",
     "\n",
     "        t_y_hat = torch.where(y_hat > 0.5, 1, 0).long()\n",
@@ -132,45 +122,6 @@
    "outputs": [],
    "source": [
     "model = CLIPConditionedSegFormer()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image = torch.randn(4, 3, 224, 224)\n",
-    "condition = torch.randint(0, 10000, (4, 77))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 86,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out = model(image, condition)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 87,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([4, 1, 56, 56])"
-      ]
-     },
-     "execution_count": 87,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out.shape"
    ]
   },
   {
