--- a/ZeroShotDatasetTest.ipynb
+++ b/ZeroShotDatasetTest.ipynb
@@ -10,20 +10,20 @@
     "warnings.filterwarnings('ignore')\n",
     "\n",
     "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from transformers import CLIPProcessor, CLIPModel\n",
+    "from torch.utils.data import Dataset\n",
     "import pandas as pd\n",
-    "\n",
+    "import numpy as np\n",
     "import torchvision\n",
-    "import pytorch_lightning as pl\n",
+    "import cv2\n",
+    "from ZeroShotDataset import ZeroShotDataset\n",
+    "from params import *\n",
     "\n",
-    "from ConditionedSegFormer import ConditionedSegFormer\n",
-    "import torchmetrics as tm\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
-    "from pytorch_lightning.callbacks import ModelCheckpoint, LearningRateMonitor\n",
+    "from transformers import CLIPProcessor, CLIPModel\n",
+    "\n",
+    "from ConditionedSegFormerPE import ConditionedSegFormer\n",
     "from LossFunc import *\n",
-    "from params import *"
+    "import pytorch_lightning as pl\n",
+    "import torchmetrics as tm"
    ]
   },
   {
@@ -35,16 +35,17 @@
     "class CLIPConditionedSegFormer(pl.LightningModule):\n",
     "    def __init__(self):\n",
     "        super().__init__()\n",
-    "        self.clip = CLIPModel.from_pretrained('openai/clip-vit-base-patch32').text_model\n",
+    "        self.clip = CLIPModel.from_pretrained('openai/clip-vit-base-patch16')\n",
+    "        self.processor = CLIPProcessor.from_pretrained('openai/clip-vit-base-patch16')\n",
     "\n",
     "        self.segformer = ConditionedSegFormer(\n",
     "            ModelParams.INCHANNELS,\n",
     "            ModelParams.WIDTHS,\n",
     "            ModelParams.DEPTHS,\n",
     "            512,\n",
+    "            768,\n",
     "            ModelParams.PATCH_SIZES,\n",
     "            ModelParams.OVERLAP_SIZES,\n",
-    "            ModelParams.REDUCTION_RATIOS,\n",
     "            ModelParams.NUM_HEADS,\n",
     "            ModelParams.EXPANSION_FACTORS,\n",
     "            ModelParams.DECODER_CHANNELS,\n",
@@ -65,24 +66,16 @@
     "            param.requires_grad = False\n",
     "\n",
     "    def forward(self, x, condition):\n",
-    "        condition = self.clip(condition).last_hidden_state\n",
-    "        return self.segformer(x, condition)\n",
+    "        condition = self.clip.text_model(condition).last_hidden_state\n",
+    "        pe = self.clip.vision_model(x).last_hidden_state\n",
+    "\n",
+    "        return self.segformer(x, pe, condition)\n",
     "    \n",
     "    def training_step(self, batch, batch_idx):\n",
     "        x, condition, y = batch\n",
     "        y_hat = self(x, condition)\n",
     "        loss = self.neloss(y_hat, y)\n",
     "        self.log(\"train_loss\", loss, prog_bar=True)\n",
-    "\n",
-    "        if self.global_step % self.plot_every == 0: \n",
-    "            y = y.repeat(1, 3, 1, 1)\n",
-    "            y_hat = y_hat.repeat(1, 3, 1, 1)\n",
-    "\n",
-    "            # x_grid = torchvision.utils.make_grid(train_dataset.image_inverse_transform(x))\n",
-    "            # self.logger.experiment.add_image('train_sample_image', x_grid, self.global_step)\n",
-    "\n",
-    "            grid = torchvision.utils.make_grid(torch.cat([y, y_hat], dim=0))\n",
-    "            self.logger.experiment.add_image('train_sample_mask', grid, self.global_step)\n",
     "\n",
     "        return loss\n",
     "    \n",
@@ -129,7 +122,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = CLIPConditionedSegFormer()"
+    "train_df = pd.read_csv(\"train.csv\")"
    ]
   },
   {
@@ -138,8 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = torch.randn(1, 3, 256, 256)\n",
-    "condition = torch.randint(0, 10000, (1, 77))\n"
+    "clip_processor = CLIPProcessor.from_pretrained('openai/clip-vit-base-patch16')"
    ]
   },
   {
@@ -148,21 +140,78 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "out = model(image, condition)"
+    "train_dataset = ZeroShotDataset(\n",
+    "    df = train_df, \n",
+    "    image_folder = 'C:/Datasets/COCO/P/ProcessedDataset/images/train/',\n",
+    "    mask_folder = \"C:/Datasets/COCO/P/ProcessedDataset/masks/train/\",\n",
+    "    mask_size = 56,\n",
+    "    templates = TrainParams.TEMPLATES, \n",
+    "    unseen_clases = [], \n",
+    "    image_processor = clip_processor, \n",
+    "    tokenizer = clip_processor.tokenizer, \n",
+    "    filter_unseen = False,\n",
+    "    filter_seen = True\n",
+    "\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "loader = torch.utils.data.DataLoader(train_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=True, collate_fn=train_dataset.collate_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "batch = next(iter(loader))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image, text, mask = batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_model = CLIPConditionedSegFormer()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out = test_model(image, text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "torch.Size([1, 1, 64, 64])"
+       "torch.Size([16, 1, 56, 56])"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -173,40 +222,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True (cuda), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
+     "data": {
+      "text/plain": [
+       "torch.Size([16, 1, 56, 56])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "trainer = pl.Trainer(\n",
-    "    accelerator=\"gpu\",\n",
-    "    max_epochs=TrainParams.EPOCHS,\n",
-    "    callbacks=[\n",
-    "        ModelCheckpoint(\n",
-    "            monitor=\"val_loss\",\n",
-    "            filename=\"clip_conditioned_segformer-{epoch:02d}-{val_loss:.2f}\",\n",
-    "            save_top_k=3,\n",
-    "            mode=\"min\"\n",
-    "        ),\n",
-    "        LearningRateMonitor(logging_interval='step')\n",
-    "    ]\n",
-    ")"
+    "mask.shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(0.5437, grad_fn=<AddBackward0>)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_model.training_step(batch, 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pytorch",
+   "display_name": "AI",
    "language": "python",
    "name": "python3"
   },
