--- a/PhraseCutPreprocess.ipynb
+++ b/PhraseCutPreprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,16 +213,13 @@
     "        img = cv2.cvtColor(img, cv2.COLOR_RGB2BGR)    \n",
     "        cv2.imwrite(IMAGES_PATH + '/' + image_str_name, img)    \n",
     "\n",
-    "        if idx > 30:\n",
-    "            break\n",
-    "\n",
     "    df = pd.DataFrame({'image': images, 'mask': masks, 'captions': captions, 'label': category, 'supercategory': supercategory, 'category_id': category_id, 'mask_num': mask_num})\n",
     "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +256,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 8/4952 [00:00<01:19, 62.15it/s]"
+      "100%|██████████| 4952/4952 [01:29<00:00, 55.37it/s]\n"
      ]
     },
     {
@@ -286,13 +283,6 @@
       "2           15         4  \n",
       "3            2         4  \n",
       "4           18         3  \n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
      ]
     }
    ],
@@ -322,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -342,7 +332,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 7/117266 [00:00<40:51, 47.83it/s]\n"
+      " 56%|█████▌    | 65437/117266 [20:12<13:43, 62.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "no existe alv\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 117266/117266 [35:17<00:00, 55.38it/s]\n"
      ]
     },
     {
@@ -398,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
