--- a/PhraseCutPreprocess.ipynb
+++ b/PhraseCutPreprocess.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
     "                    \n",
     "            mask = cv2.resize(mask, (256, 256))\n",
     "            mask = cv2.cvtColor(mask, cv2.COLOR_RGB2BGR)\n",
-    "            cv2.imwrite(MASKS_PATH + '/' + image_str_name_idx, mask)\n",
+    "            # cv2.imwrite(MASKS_PATH + '/' + image_str_name_idx, mask)\n",
     "\n",
     "            if len(mask_count[img_str_filled]) > 1 and storeCaptions:\n",
     "                images.append(image_str_name)\n",
@@ -211,7 +211,7 @@
     "\n",
     "        img = cv2.resize(img, (256, 256))\n",
     "        img = cv2.cvtColor(img, cv2.COLOR_RGB2BGR)    \n",
-    "        cv2.imwrite(IMAGES_PATH + '/' + image_str_name, img)    \n",
+    "        # cv2.imwrite(IMAGES_PATH + '/' + image_str_name, img)    \n",
     "\n",
     "    df = pd.DataFrame({'image': images, 'mask': masks, 'captions': captions, 'label': category, 'supercategory': supercategory, 'category_id': category_id, 'mask_num': mask_num})\n",
     "    return df"
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of classes:  80\n"
+     ]
+    }
+   ],
+   "source": [
+    "base_class = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, \n",
+    "20, 21, 22, 24, 25, 26, 27, 30, 31, 32, 33, 34, 35, 37, 38, 39, 40, 41, 42, 43, \n",
+    "44, 45, 46, 47, 48, 49, 50, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, \n",
+    "65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 77, 78, 79, 80, 81, 82, 83, 84, 85, \n",
+    "86, 87, 89, 90, 91, 92, 93, 95, 96, 97, 98,  99, 100, 101, 102, 103, 104, 105, \n",
+    "106, 107, 108, 109, 110, 111, 113, 114, 115, 116, 117, 118, 119, 120, 121, 122, \n",
+    "123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 134, 135, 138, 139, 140, 141, \n",
+    "142, 143, 144, 145, 146, 147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 158, \n",
+    "159, 161, 162, 163, 164, 165, 166, 167, 168, 169, 170]\n",
+    "novel_class = [19, 23, 28, 29, 36, 51, 76, 88, 94, 112, 133, 136, 137, 157, 160]\n",
+    "both_class = [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, \n",
+    "19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, \n",
+    "39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, \n",
+    "59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, \n",
+    "79, 80, 81, 82, 83, 84, 85, 86, 87, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97, 98, \n",
+    "99, 100, 101, 102, 103, 104, 105, 106, 107, 108, 109, 110, 111, 112, 113, 114, \n",
+    "115, 116, 117, 118, 119, 120, 121, 122, 123, 124, 125, 126, 127, 128, 129, 130, \n",
+    "131, 132, 133, 134, 135, 136, 137, 138, 139, 140, 141, 142, 143, 144, 145, 146, \n",
+    "147, 148, 149, 150, 151, 152, 153, 154, 155, 156, 157, 158, 159, 160, 161, 162, \n",
+    "163, 164, 165, 166, 167, 168, 169, 170]\n",
+    "\n",
+    "instance_categories = instances_train_json['categories']\n",
+    "\n",
+    "# print number of classes\n",
+    "\n",
+    "print('Number of classes: ', len(instance_categories))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -250,39 +292,6 @@
       "Len captions set 5000\n",
       "Len Instances 36781\n",
       "Len Captions 25014\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4952/4952 [01:29<00:00, 55.37it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              image                mask  \\\n",
-      "0  000000289343.jpg  000000289343_0.jpg   \n",
-      "1  000000289343.jpg  000000289343_1.jpg   \n",
-      "2  000000289343.jpg  000000289343_2.jpg   \n",
-      "3  000000289343.jpg  000000289343_3.jpg   \n",
-      "4  000000061471.jpg  000000061471_4.jpg   \n",
-      "\n",
-      "                                          captions    label supercategory  \\\n",
-      "0   A man is riding a large bike through the park.      dog        animal   \n",
-      "1   A man is riding a large bike through the park.   person        person   \n",
-      "2   A man is riding a large bike through the park.    bench       outdoor   \n",
-      "3   A man is riding a large bike through the park.  bicycle       vehicle   \n",
-      "4  Puppy chewing on toilet paper in the bathroom.       dog        animal   \n",
-      "\n",
-      "   category_id  mask_num  \n",
-      "0           18         4  \n",
-      "1            1         4  \n",
-      "2           15         4  \n",
-      "3            2         4  \n",
-      "4           18         3  \n"
      ]
     }
    ],
@@ -305,14 +314,14 @@
     "print('Len Instances', len(instances_val))\n",
     "print('Len Captions', len(captions_val))\n",
     "\n",
-    "df = preprocess_split(instances_val_json, captions_val, instance_categories, DATASET_VAL_IMAGES_PATH, IMAGES_PATH + '/val/', MASKS_PATH + '/val/')\n",
-    "print(df.head())\n",
-    "df.to_csv('val.csv', index=False)"
+    "# df = preprocess_split(instances_val_json, captions_val, instance_categories, DATASET_VAL_IMAGES_PATH, IMAGES_PATH + '/val/', MASKS_PATH + '/val/')\n",
+    "# print(df.head())\n",
+    "# df.to_csv('val.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -326,53 +335,6 @@
       "Len captions set 118287\n",
       "Len Instances 860001\n",
       "Len Captions 591753\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 56%|█████▌    | 65437/117266 [20:12<13:43, 62.93it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "no existe alv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 117266/117266 [35:17<00:00, 55.38it/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              image                mask  \\\n",
-      "0  000000558840.jpg  000000558840_0.jpg   \n",
-      "1  000000558840.jpg  000000558840_1.jpg   \n",
-      "2  000000558840.jpg  000000558840_2.jpg   \n",
-      "3  000000558840.jpg  000000558840_3.jpg   \n",
-      "4  000000558840.jpg  000000558840_4.jpg   \n",
-      "\n",
-      "                                            captions    label supercategory  \\\n",
-      "0  Tray of food disguised in car, on restaurant c...  hot dog          food   \n",
-      "1  Tray of food disguised in car, on restaurant c...   bottle       kitchen   \n",
-      "2  Tray of food disguised in car, on restaurant c...      cup       kitchen   \n",
-      "3  Tray of food disguised in car, on restaurant c...   person        person   \n",
-      "4  Tray of food disguised in car, on restaurant c...    spoon       kitchen   \n",
-      "\n",
-      "   category_id  mask_num  \n",
-      "0           58        11  \n",
-      "1           44        11  \n",
-      "2           47        11  \n",
-      "3            1        11  \n",
-      "4           50        11  \n"
      ]
     }
    ],
@@ -395,14 +357,14 @@
     "print('Len Instances', len(instances_train))\n",
     "print('Len Captions', len(captions_train))\n",
     "\n",
-    "df = preprocess_split(instances_train_json, captions_train, instance_categories, DATASET_TRAIN_IMAGES_PATH, IMAGES_PATH + '/train/', MASKS_PATH + '/train/')\n",
-    "print(df.head())\n",
-    "df.to_csv('train.csv', index=False)"
+    "# df = preprocess_split(instances_train_json, captions_train, instance_categories, DATASET_TRAIN_IMAGES_PATH, IMAGES_PATH + '/train/', MASKS_PATH + '/train/')\n",
+    "# print(df.head())\n",
+    "# df.to_csv('train.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
