--- a/ZeroShotDatasetTest.ipynb
+++ b/ZeroShotDatasetTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,12 +23,15 @@
     "from ConditionedSegFormerPE import ConditionedSegFormer\n",
     "from LossFunc import *\n",
     "import pytorch_lightning as pl\n",
-    "import torchmetrics as tm"
+    "import torchmetrics as tm\n",
+    "\n",
+    "# pytorch random train test split\n",
+    "from torch.utils.data import random_split"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +99,18 @@
     "        x, condition, y = batch\n",
     "        y_hat = self(x, condition)\n",
     "        loss = self.neloss(y_hat, y)\n",
+    "        \n",
+    "        acc = self.acc(y_hat, y)\n",
+    "        dice = self.dice(y_hat, y)\n",
+    "        iou = self.iou(y_hat, y)\n",
+    "        f1 = self.f1score(y_hat, y)\n",
+    "\n",
     "        self.log(\"val_loss\", loss, prog_bar=True)\n",
+    "        self.log(\"val_acc\", acc, prog_bar=True)\n",
+    "        self.log(\"val_dice\", dice, prog_bar=True)\n",
+    "        self.log(\"val_iou\", iou, prog_bar=True)\n",
+    "        self.log(\"val_f1\", f1, prog_bar=True)\n",
+    "        \n",
     "        return loss\n",
     "    \n",
     "    def test_step(self, batch, batch_idx):\n",
@@ -131,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,11 +156,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = ZeroShotDataset(\n",
+    "SEED = 42\n",
+    "torch.manual_seed(SEED)\n",
+    "np.random.seed(SEED)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "complete_dataset = ZeroShotDataset(\n",
     "    df = train_df, \n",
     "    # image_folder = 'C:/Datasets/COCO/P/ProcessedDataset/images/train/',\n",
     "    image_folder = 'ProcessedDataset/images/train/',\n",
@@ -159,21 +184,26 @@
     "    tokenizer = clip_processor.tokenizer, \n",
     "    filter_unseen = False,\n",
     "    filter_seen = True\n",
-    ")\n"
+    ")\n",
+    "\n",
+    "train_size = int(TrainParams.TRAIN_VAL_SPLIT * len(complete_dataset))\n",
+    "val_size = len(complete_dataset) - train_size\n",
+    "train_dataset, val_dataset = random_split(complete_dataset, [train_size, val_size], generator=torch.Generator().manual_seed(SEED))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=True, collate_fn=train_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)"
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=True, collate_fn=complete_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
+    "val_loader = torch.utils.data.DataLoader(val_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=False, collate_fn=complete_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,28 +221,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "GPU available: True (cuda), used: True\n",
-      "TPU available: False, using: 0 TPU cores\n",
-      "IPU available: False, using: 0 IPUs\n",
-      "HPU available: False, using: 0 HPUs\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
     "    dirpath='./checkpoints',\n",
     "    filename='{epoch}-{val_loss:.2f}-{val_r2:.2f}',\n",
-    "    save_top_k=1,\n",
-    "    monitor='val_loss',\n",
+    "    save_top_k=3,\n",
+    "    monitor='val_iou',\n",
     "    every_n_epochs=1,\n",
-    "    mode='min'\n",
+    "    mode='max'\n",
     ")\n",
     "\n",
     "trainer = pl.Trainer(\n",
@@ -227,39 +246,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
-      "\n",
-      "  | Name      | Type                 | Params\n",
-      "---------------------------------------------------\n",
-      "0 | clip      | CLIPModel            | 149 M \n",
-      "1 | segformer | ConditionedSegFormer | 18.5 M\n",
-      "2 | neloss    | NELoss               | 0     \n",
-      "3 | acc       | BinaryAccuracy       | 0     \n",
-      "4 | dice      | DiceLoss             | 0     \n",
-      "5 | iou       | IoULoss              | 0     \n",
-      "6 | f1score   | BinaryF1Score        | 0     \n",
-      "---------------------------------------------------\n",
-      "18.5 M    Trainable params\n",
-      "149 M     Non-trainable params\n",
-      "168 M     Total params\n",
-      "672.555   Total estimated model params size (MB)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 0:  56%|█████▌    | 13862/24913 [1:41:29<1:20:54,  2.28it/s, v_num=13, train_loss=0.0902]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "trainer.fit(test_model, train_loader)"
    ]
