--- a/ZeroShotDatasetTest.ipynb
+++ b/ZeroShotDatasetTest.ipynb
@@ -179,7 +179,7 @@
     "    mask_folder = 'ProcessedDataset/masks/train/',\n",
     "    mask_size = 56,\n",
     "    templates = TrainParams.TEMPLATES, \n",
-    "    unseen_clases = [], \n",
+    "    unseen_classes = TrainParams.UNSEEN_CLASSES, \n",
     "    image_processor = clip_processor, \n",
     "    tokenizer = clip_processor.tokenizer, \n",
     "    filter_unseen = False,\n",
