--- a/TestFiles/test.ipynb
+++ b/TestFiles/test.ipynb
@@ -2,25 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from LossFunc import *"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "floss = FocalLoss()\n",
-    "dloss = DiceLoss()\n",
-    "neloss = NELoss(1, 1)"
+    "import torch.nn.functional as F"
    ]
   },
   {
