--- a/ZeroShotDatasetTest.ipynb
+++ b/ZeroShotDatasetTest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,6 +195,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of training images: 298426\n",
+      "Number of val images: 74607\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Number of training images: {len(train_dataset)}\")   \n",
+    "print(f\"Number of val images: {len(val_dataset)}\")   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=TrainParams.BATCH_SIZE, shuffle=True, collate_fn=complete_dataset.collate_fn, num_workers=TrainParams.NUM_WORKERS)\n",
@@ -223,7 +242,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "GPU available: True (cuda), used: True\n",
+      "TPU available: False, using: 0 TPU cores\n",
+      "IPU available: False, using: 0 IPUs\n",
+      "HPU available: False, using: 0 HPUs\n"
+     ]
+    }
+   ],
    "source": [
     "checkpoint_callback = pl.callbacks.ModelCheckpoint(\n",
     "    dirpath='./checkpoints',\n",
@@ -248,7 +278,46 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "You are using a CUDA device ('NVIDIA GeForce RTX 4090') that has Tensor Cores. To properly utilize them, you should set `torch.set_float32_matmul_precision('medium' | 'high')` which will trade-off precision for performance. For more details, read https://pytorch.org/docs/stable/generated/torch.set_float32_matmul_precision.html#torch.set_float32_matmul_precision\n",
+      "Missing logger folder: c:\\Users\\david\\OneDrive\\Documents\\GitHub\\TextualSegFormer\\lightning_logs\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "\n",
+      "  | Name      | Type                 | Params\n",
+      "---------------------------------------------------\n",
+      "0 | clip      | CLIPModel            | 149 M \n",
+      "1 | segformer | ConditionedSegFormer | 18.5 M\n",
+      "2 | neloss    | NELoss               | 0     \n",
+      "3 | acc       | Accuracy             | 0     \n",
+      "4 | dice      | DiceLoss             | 0     \n",
+      "5 | iou       | IoULoss              | 0     \n",
+      "6 | f1score   | F1Score              | 0     \n",
+      "---------------------------------------------------\n",
+      "18.5 M    Trainable params\n",
+      "149 M     Non-trainable params\n",
+      "168 M     Total params\n",
+      "672.555   Total estimated model params size (MB)\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ce11e946f1e74210b22e50210480088e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training: 0it [00:00, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "trainer.fit(test_model, train_loader)"
    ]
@@ -270,7 +339,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   },
   "orig_nbformat": 4
  },
