--- a/ZeroShotDatasetTest.ipynb
+++ b/ZeroShotDatasetTest.ipynb
@@ -100,10 +100,13 @@
     "        y_hat = self(x, condition)\n",
     "        loss = self.neloss(y_hat, y)\n",
     "\n",
-    "        acc = self.acc(y_hat, y)\n",
+    "        t_y_hat = torch.where(y_hat > 0.5, 1, 0).long()\n",
+    "        t_y = torch.where(y > 0.5, 1, 0).long()\n",
+    "\n",
+    "        acc = self.acc(t_y_hat, t_y)\n",
     "        dice = self.dice(y_hat, y)\n",
     "        iou = self.iou(y_hat, y)\n",
-    "        f1 = self.f1score(y_hat, y)\n",
+    "        f1 = self.f1score(t_y_hat, t_y)\n",
     "\n",
     "        self.log(\"val_loss\", loss, prog_bar=True)\n",
     "        self.log(\"val_acc\", acc, prog_bar=True)\n",
